# instantly-mcp-python

./: .gitignore  Dockerfile  Procfile  README.md  TESTING_PLAN.md  env.example  pyproject.toml  requirements.txt  setup.py
src/instantly_mcp/: __init__.py  client.py  http_app.py  server.py
src/instantly_mcp/models/: __init__.py  accounts.py  analytics.py  background_jobs.py  campaigns.py  common.py  emails.py  leads.py
src/instantly_mcp/tools/: __init__.py  accounts.py  analytics.py  background_jobs.py  campaigns.py  emails.py  leads.py
